fix nav overflow

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ html:focus-within {
 html,
 body {
   min-height: 100%;
+  overflow-x: hidden;
   /* height: 100%; */
 }
 
@@ -216,20 +217,19 @@ a {
     position: absolute;
     display: block;
     top: 5rem;
-    left: 200%;
-    right: -100%;
+    left: 1.4rem;
+    right: 1.4rem;
     max-height: 0;
+    padding: 0;
     opacity: 0;
-    padding-top: 2rem;
     text-align: center;
     background-color: red;
     clip-path: polygon(0 100%, 100% 100%, 100% 100%, 100% 100%, 100% 0, 95% 14%, 0 14%);
-    transition: all .8s ease;
+    transition: all .3s ease;
   }
 
   .header__nav.toggled .header__links {
-    left: 1.4rem;
-    right: 1.4rem;
+    padding-top: 2rem;
     max-height: 100vh;
     opacity: 1;
     transition: all .5s ease;
